--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
             </div>
         </section>
     </main>
+
+    <!-- footer -->
     <footer>
         <div class="footer-column">
             <h3 class="section-title">Lets Connect</h3>
